Fix: Agregación de la tarea de subida de imagenes a HU3