@@ -3,12 +3,14 @@ package com.reservas.security;
 import com.reservas.model.Propietario;
 import com.reservas.repository.PropietarioRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import java.util.Collections;
+import java.util.List;
 
 
 @Service
@@ -35,7 +37,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new User(
                 propietario.getNombreCuenta(),
                 propietario.getContrasena(),
-                Collections.emptyList()
+                List.of(new SimpleGrantedAuthority("ROLE_USER"))
         );
     }
 }
